fixed spacing of ghost list

--- a/src/components/Ghost/Ghost.module.css
+++ b/src/components/Ghost/Ghost.module.css
@@ -1,6 +1,7 @@
 .article {
   display: grid;
   gap: 0.75rem;
+  padding-block: 1.75rem;
   transition-property: opacity;
   transition-duration: var(--transition--duration--normal);
   transition-timing-function: var(--transition--ease--quick);
